lib_LTLIBRARIES=libpika.la
libpika_la_LDFLAGS = -version-info 0:0:1
libpika_la_SOURCES = PArray.cpp PAst.cpp PBasic.cpp PByteArray.cpp PClassInfo.cpp PCollector.cpp PCompiler.cpp PContext.cpp PDebugger.cpp PDef.cpp PEngine.cpp PEnumerator.cpp PError.cpp PFile.cpp PFunction.cpp PGenCode.cpp PHooks.cpp PImport.cpp PLiteralPool.cpp PLocalsObject.cpp PMemPool.cpp PMemory.cpp PModule.cpp PNativeBind.cpp PNativeMethod.cpp PObject.cpp POpcode.cpp PPackage.cpp PParser.cpp PPlatform.cpp PPlatformPosix.cpp PProperty.cpp PRandom.cpp PRegExpr.cpp PScript.cpp PString.cpp PStringTable.cpp PSymbolTable.cpp PSystemLib.cpp PTable.cpp PTokenizer.cpp PType.cpp PUserData.cpp PValue.cpp PValueEnumerator.cpp PWorld.cpp Pika.cpp
INCLUDES = -I@top_srcdir@/libpika
LDADD = @top_srcdir@/libpika/libpika.la
